# AVR-sudoku-solver

./: HRY411_MILESTONE_REPORT_TEAM5.docx  LUT.hpp  main.c  readme.md  simulation.stim  simulation_27_11.stim  sudoku.cpp
BINARIES/: main12.elf
CODE/: fuses_config.conf  sudoku.cppV2
FINAL_REPORT/: ACE411_FINAL_REPORT_Team5.aux  ACE411_FINAL_REPORT_Team5.tex
HRY411_FINAL_TEAM5/: readme.md  team5final.elf
HRY411_FINAL_TEAM5/CODE/: CMakeLists.txt  main.cpp  sudoku.cpp
HRY411_LAB5_2018030020/: main.c  main_sim.c
HRY411_LAB5_2018030020_OLD/: stim_report.stim
HRY411_MILESTONE1_TEAM5/: readme.md  team5milestone.elf
MILESTONE_REPORT/: ACE411_MILESTONE_REPORT_Team5.aux  ACE411_MILESTONE_REPORT_Team5.tex
OLD/: CMakeLists.txt  kallinteris.hpp  main.c  sudoku.h
OLD/HRY411_LAB5_2018030020_OLD/: simulation.stim
OLD/HRY411_MILESTONE1_TEAM5/: readme.md  team5milestone.elf
OLD/HRY411_MILESTONE1_TEAM5/CODE/: CMakeLists.txt  sudoku.h
OLD/OLD_STIMULI FILES/: break_debug_test.stim  break_test.stim  two_sudokus.stim
OLD/Project_Try1_OLD/Project_Try1/: Project_Try1.componentinfo.xml  main.c
OLD/READY_STIMULI_FILES_FOR_SUBMIT/: simple_solve.stim
PERFORMANCE_ANALYSIS/: PERF_README.md  file_parser.c
Project_Try1_OLD/: Project_Try1.atsln
READY_STIMULI_FILES_FOR_SUBMIT/: two_sudokus.stim
STIMULI FILES/: break_test.stim  simulation_26_11.stim  two_sudokus.stim
Sudoku_Backtracking_C_Desktop/: main.c  unrolled_MACROS.c  unrolled_loops.c
TEST_NEW_ALGORITHM/: LUT.hpp  Sudoku.h  kallinteris.hpp  main.cpp  main.h  simulation.stim  sudoku.cpp  sudoku.h
(+8 files in other folders)
